--- a/main.css
+++ b/main.css
@@ -1273,3 +1273,7 @@ button.lookFilled-1Gx00P.colorGreen-29iAKY:hover{
 	width: 390px;
 	border: 5px solid var(--border-color);
 }
+
+.flex-1xMQg5.flex-1O1GKY.horizontal-1ae9ci.horizontal-2EEEnY.flex-1O1GKY.directionRow-3v3tfG.justifyStart-2NDFzi.alignStretch-DpGPf3.wrap-ZIn9Iy.sourceContainer-3LOXkb.grid-32iiFi{
+	width: 380px;
+}
