--- a/DiscordEdit/DiscordEditUpdate.css
+++ b/DiscordEdit/DiscordEditUpdate.css
@@ -1460,3 +1460,7 @@ div.item-1tOPte.labelContainer-1BLJti.colorDanger-2qLCe1.colorDefault-2K3EoJ .la
 .submenuPaddingContainer-fiOCHc, .submenu-2-ysNh.menu-3sdvDG{
 	background-color: transparent;
 }
+
+.menu-3sdvDG.styleFixed-sX-yHV{
+	background-color: transparent;
+}
