--- a/WEB/css/main.css
+++ b/WEB/css/main.css
@@ -772,7 +772,6 @@ div#body{
 	width: 400px;
 	height: 482.4px;
 	border-radius: 10px;
-	display: inline-block;
 	margin-left: 10px;
 	margin-top: 10px;
 	font-family: Calibri, sans-serif;
@@ -786,6 +785,7 @@ div#body{
 	width: 380.8px;
 	height: 184px;
 	object-fit: cover;
+	text-align: CENTER;
 }
 
 .CustomStatusPresetstitle{
