--- a/Web/css/main.css
+++ b/Web/css/main.css
@@ -35,9 +35,6 @@ body{
     background-color: #7289da;
     border: 1px solid #7289da;
     width: 75px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 31%;
     border-radius: 10px;
     transition: background-color 0.33s, border 0.33s;
 }
@@ -48,6 +45,7 @@ body{
 }
 
 .joina{
+	width: 87px !important;
 	text-decoration: none;
 	text-align: center;
 }
@@ -143,9 +141,7 @@ div#body{
     background-color: #7289da;
     border: 1px solid #7289da;
     width: 65px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 33%;
+    
     border-radius: 10px;
     transition: background-color 0.33s, border 0.33s;
     text-align: center;
@@ -162,14 +158,22 @@ div#body{
     background-color: #7289da;
     border: 1px solid #7289da;
     width: 140px;
-    height: 61.2px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 20%;
+    height: 46.2px;
+    
     border-radius: 10px;
     transition: background-color 0.33s, border 0.33s;
     text-align: center;
-    cursor: default;
+    cursor: pointer;
+}
+
+.BDa{
+	text-decoration: none;
+	color: whitesmoke;
+}
+
+.navinstallerBD:hover{
+	background-color: black;
+	border: 1px solid var(--border-color);
 }
 
 .imginstallerBD{
@@ -201,9 +205,7 @@ div#body{
     background-color: #7289da;
     border: 1px solid #7289da;
     width: 65px;
-    margin-top: 25px;
-    margin-bottom: 25px;
-    margin-left: 33%;
+    
     border-radius: 10px;
     transition: background-color 0.33s, border 0.33s;
     text-align: center;
