--- a/Web/css/main.css
+++ b/Web/css/main.css
@@ -276,9 +276,7 @@ div#body{
 	padding: 5px;
 	background-color: #7289da;
 	width: 105px;
-	margin-top: 25px;
-	margin-bottom: 25px;
-	margin-left: 147.5px;
+	
 	border: 1px solid #7289da;
 	font-family: Calibri, sans-serif;
 	transition: background-color 0.33s, border 0.33s;
@@ -357,13 +355,12 @@ div#body{
 }
 
 .RadialStatusdownloaddiv{
+	margin-right: 0px;
 	padding: 5px;
+	width: 105px !important;
+	border: 1px solid #7289da; 
+	transition: background-color 0.33s, border 0.33s; 
 	background-color: #7289da;
-	width: 105px;
-	margin-top: 25px;
-	margin-bottom: 25px;
-	margin-left: 147.5px;
-	border: 1px solid #7289da;
 	font-family: Calibri, sans-serif;
 	transition: background-color 0.33s, border 0.33s;
 }
@@ -452,9 +449,7 @@ div#body{
 	padding: 5px;
 	background-color: #7289da;
 	width: 105px;
-	margin-top: 25px;
-	margin-bottom: 25px;
-	margin-left: 147.5px;
+	
 	border: 1px solid #7289da;
 	font-family: Calibri, sans-serif;
 	transition: background-color 0.33s, border 0.33s;
@@ -639,9 +634,7 @@ div#body{
 	padding: 5px;
 	background-color: #7289da;
 	width: 105px;
-	margin-top: 25px;
-	margin-bottom: 25px;
-	margin-left: 147.5px;
+	
 	border: 1px solid #7289da;
 	font-family: Calibri, sans-serif;
 	transition: background-color 0.33s, border 0.33s;
@@ -733,9 +726,7 @@ div#body{
 	padding: 5px;
 	background-color: #7289da;
 	width: 105px;
-	margin-top: 25px;
-	margin-bottom: 25px;
-	margin-left: 147.5px;
+	
 	border: 1px solid #7289da;
 	font-family: Calibri, sans-serif;
 	transition: background-color 0.33s, border 0.33s;
@@ -827,9 +818,7 @@ div#body{
 	padding: 5px;
 	background-color: #7289da;
 	width: 105px;
-	margin-top: 25px;
-	margin-bottom: 25px;
-	margin-left: 147.5px;
+	
 	border: 1px solid #7289da;
 	font-family: Calibri, sans-serif;
 	transition: background-color 0.33s, border 0.33s;
