--- a/Web/css/main.css
+++ b/Web/css/main.css
@@ -6,18 +6,70 @@ body{
 	background-color: black;
 	color: whitesmoke;
 	overflow-x: hidden;
+	margin: 0px;
 }
 
 /*NAV*/
 
-.nav{
-	border-right: 5px solid var(--border-color);
-	width: 20%;
-	padding: none;
-	margin-top: -10px;
+#Menubutton{
+	width: 34px;
+	height: 27px;
+	padding: 5px;
+	margin: 5px;
+	background-color: var(--border-color);
+	cursor: pointer;
+}
+
+#MenubuttonClose{
+	right: 1%;
+	background-color: red;
+	font-family: Calibri, sans-serif;
+	cursor: pointer;
+	font-size: 25px;
+	width: 34px;
+    height: 27px;
+    padding: 5px;
+	padding-top: 2.5px;
+    margin: 5px;
+    margin-top: 2px;
+    top: 2px;
+    text-align: center;
+}
+
+#fixedtopbar{
+	right: 1%;
 	height: 100%;
+	min-height: 50px;
+	border-bottom: 5px solid var(--border-color);
+	margin-left: -0px;
+	color: whitesmoke;
+}
+
+#nav{
+	border-right: 5px solid var(--border-color);
+	min-width: 20%;
+	width: 20%;
+	max-width: 1519.200px;
+	margin-top: -10px;
+	height: 750px;
+	min-height: 1000px;
 	position: fixed;
 	z-index: 2;
+	background-color: black;
+}
+
+#navbackground{
+	margin-left: 0px;
+	border-right: 5px solid var(--border-color);
+	min-width: 10%;
+	width: 100%;
+	max-width: 1900;
+	margin-top: 0px;
+	height: 750px;
+	min-height: 100px;
+	position: fixed;
+	z-index: 2;
+	background-color: rgba(0, 0, 0, 0.9);
 }
 
 #BD{
@@ -64,7 +116,7 @@ a #join{
 /*Body*/
 
 div#body{
-	margin-left: 23%;
+	padding-left: 0px;
 	height: 100%;
 	overflow-y: hidden;
 }
@@ -191,7 +243,7 @@ div#body{
 	margin-top: 10px;
 	margin-bottom: 10px;
 	border-top: 3px solid var(--border-color);
-	width: 97%;
+	width: 100%;
 }
 
 .navpluga{
@@ -220,7 +272,8 @@ div#body{
 
 .DiscordEdit{
 	border: 5px solid var(--border-color);
-	width: 400px;
+	width: 100%;
+	max-width: 400px;
 	height: 482.4px;
 	border-radius: 10px;
 	display: inline-block;
