--- a/DiscordEdit/discord_theme/DiscordEditUpdate.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdate.css
@@ -1174,3 +1174,8 @@ button.button-38aScr.lookFilled-1Gx00P.colorRed-1TFJan.sizeMedium-1AC_Sl.grow-q7
 	border: 5px solid var(--border-color) !important;
 	background-color: var(--background-color);
 }
+
+.body-3HBlXn.thin-1ybCId.scrollerBase-289Jih{
+	border: 5px solid var(--border-color) !important;
+	background-color: var(--background-color);
+}
