--- a/DiscordEdit/discord_theme/DiscordEditUpdate.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdate.css
@@ -1,1 +1,21 @@
+/*CSS*/
 
+.tabBody-2dgbAs{
+  background-color: var(--background-color);
+}
+
+.content-2hZxGK.content-GYGe57.thin-31rlnD.scrollerBase-_bVAAt{
+  background-color: var(--background-color);
+}
+
+.pageWrapper-2PwDoS{
+  background-color: var(--background-color) !important;
+}
+
+.root-g14mjS{
+  background-color: var(--background-color) !important;
+}
+
+.footer-31IekZ{
+  background-color: var(--background-color) !important;
+}
