--- a/DiscordEdit/discord_theme/DiscordEditUpdate.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdate.css
@@ -139,6 +139,10 @@
   border-top: none;
 }
 
+.membersWrap-3NUR2t{
+  border-left: 5px solid var(--border-color);
+}
+
 /*Window top bar*/
 
 .typeWindows-2-g3UY.withFrame-2dL45i.titleBar-1it3bQ.horizontalReverse-2QssvL.flex-3BkGQD.directionRowReverse-HZatnx.justifyStart-2Mwniq.alignStretch-Uwowzr{
