--- a/DiscordEdit/discord_theme/DiscordEditUpdate.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdate.css
@@ -143,6 +143,40 @@
   border-left: 5px solid var(--border-color);
 }
 
+.membersWrap-3NUR2t.hiddenMembers-8kpYM0{
+  border: none;
+}
+
+.button-1EGGcP.buttonColor-3bP3fX.button-f2h6uQ.lookFilled-yCfaCM.colorBrand-I6CyqQ.sizeSmall-wU2dO-.grow-2sR_-F.button-1EGGcP{
+  border: 2px solid var(--border-color);
+}
+
+.wrapper-1HIH0j.userSelectNone-3AtPzf.cursorDefault-2KkZ5q{
+  border: 4px solid var(--border-color);
+}
+
+.colorStandard-21JIj7.size14-3fJ-ot.h5-2RwDNl.title-3hptVQ.header-3anOjb{
+  border-bottom: 4px solid var(--border-color);
+}
+
+.flex-2S1XBF.flex-3BkGQD.vertical-3aLnqW.flex-3BkGQD.directionColumn-3pi1nm.justifyCenter-rrurWZ.alignStretch-Uwowzr.noWrap-hBpHBz.guildInfo-UCKhrV{
+  border-right: 4px solid var(--border-color);
+}
+
+.icon-1zKOXL.guildIconImage-74OdmM.guildIcon-3ZfRfI.iconSizeLarge-_r2zCK.iconActiveLarge-ac-EDu{
+  border: 4px solid var(--border-color);
+}
+
+/*Border embed*/
+
+.embedFull-1HGV2S{
+  border: 4px solid var(--background-tertiary);
+}
+
+.embedSuppressButton-1rZHq6{
+  right: -25px;
+}
+
 /*Window top bar*/
 
 .typeWindows-2-g3UY.withFrame-2dL45i.titleBar-1it3bQ.horizontalReverse-2QssvL.flex-3BkGQD.directionRowReverse-HZatnx.justifyStart-2Mwniq.alignStretch-Uwowzr{
