--- a/DiscordEdit/web/css/main.css
+++ b/DiscordEdit/web/css/main.css
@@ -7,6 +7,7 @@ body{
 	color: whitesmoke;
 	overflow-x: hidden;
 	margin: 0px;
+	height: 2300px;
 }
 
 /*NAV*/
@@ -275,13 +276,12 @@ div#body{
 /*DiscordEdit*/
 
 .DiscordEdit{
+	display: inline-block;
 	border: 5px solid var(--border-color);
 	width: 100%;
 	max-width: 400px;
 	height: 482.4px;
 	border-radius: 10px;
-	display: inline-block;
-	display: inline-block;
 	margin-left: 10px;
 	margin-top: 10px;
 	font-family: Calibri, sans-serif;
@@ -359,12 +359,12 @@ div#body{
 /*MC_theme*/
 
 .MC_theme{
+	display: inline-block;
 	border: 5px solid var(--border-color);
 	width: 100%;
 	max-width: 400px;
 	height: 482.4px;
 	border-radius: 10px;
-	display: block;
 	margin-left: 10px;
 	margin-top: 10px;
 	font-family: Calibri, sans-serif;
@@ -443,12 +443,12 @@ div#body{
 /*RadialStatus*/
 
 .RadialStatus{
+	display: inline-block;
 	border: 5px solid var(--border-color);
 	width: 400px;
 	height: 482.4px;
 	border-radius: 10px;
 	font-family: Calibri, sans-serif;
-	display: inline-block;
 	margin-left: 10px;
 	margin-top: 10px;
 }
@@ -535,6 +535,7 @@ div#body{
 /*ReadAllNotificationsButton*/
 
 .ReadAllNotificationsButton{
+	display: inline-block;
 	border: 5px solid var(--border-color);
 	width: 400px;
 	height: 482.4px;
@@ -625,11 +626,11 @@ div#body{
 /*CallTimeCounter*/
 
 .CallTimeCounter{
+	display: inline-block;
 	border: 5px solid var(--border-color);
 	width: 400px;
 	height: 482.4px;
 	border-radius: 10px;
-	display: inline-block;
 	margin-left: 10px;
 	margin-top: 20px;
 	font-family: Calibri, sans-serif;
@@ -718,11 +719,11 @@ div#body{
 /*SplitLargeMessages*/
 
 .SplitLargeMessages{
+	display: inline-block;
 	border: 5px solid var(--border-color);
 	width: 400px;
 	height: 482.4px;
 	border-radius: 10px;
-
 	margin-left: 10px;
 	margin-top: 20px;
 	font-family: Calibri, sans-serif;
@@ -809,11 +810,11 @@ div#body{
 /*GameActivityToggle*/
 
 .GameActivityToggle{
+	display: inline-block;
 	border: 5px solid var(--border-color);
 	width: 400px;
 	height: 482.4px;
 	border-radius: 10px;
-
 	margin-left: 10px;
 	margin-top: 20px;
 	font-family: Calibri, sans-serif;
@@ -901,12 +902,13 @@ div#body{
 /*CustomStatusPresets*/
 
 .CustomStatusPresets{
+	display: inline-block;
 	border: 5px solid var(--border-color);
 	width: 400px;
 	height: 482.4px;
 	border-radius: 10px;
 	margin-left: 10px;
-	margin-top: 10px;
+	margin-top: 20px;
 	font-family: Calibri, sans-serif;
 }
 
@@ -1005,4 +1007,38 @@ div.n1box{
 	background-color: black;
 	border-top: 1px solid var(--border-color);
 	color: whitesmoke;
+}
+
+/*dashboard*/
+
+div.dashboardtheme{
+	width:100%;
+	height: 530px;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	display: inline-flex;
+}
+
+div.dashboardthemec{
+	width:100%;
+	height: 530px;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	display: inline-flex;
+}
+
+/*div.dashboardplugin{
+	width:100%;
+	height: 530px;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	display: inline-flex;
+}*/
+
+div.dashboardpluginc{
+	width:100%;
+	height: 530px;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	display: inline-flex;
 }
