--- a/DiscordEdit/discord_theme/DiscordEditUpdate.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdate.css
@@ -379,3 +379,28 @@
 .live-1V2D-f.liveLarge-IxMVzY.textBadge-1fdDPJ.base-3IDx3L.liveShapeRoundRight-1ifBrO[style*="background-color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"]{
   background-color: var(--color-icon) !important;
 }
+
+.live-1V2D-f.liveLarge-IxMVzY.textBadge-1fdDPJ.base-3IDx3L.liveShapeRound-2Tgi2d[style*="background-color: hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"]{
+  background-color: var(--color-icon) !important;
+}
+
+.isUnread-3Lojb- {
+    border-color: var(--color-icon);
+}
+
+.container-3XgAHv.floating-3M3WeH{
+  border-left: 5px solid var(--border-color);
+  border-radius: 0;
+}
+
+.theme-dark .background-fkKrXt{
+  background-color: var(--background-color);
+}
+
+.userAvatar-3Hwf1F.avatar-3FKimL.avatarSmall-3qwAkA{
+  box-shadow: var(--box-shadow-speak-user);
+}
+
+.userAvatar-3Hwf1F.avatar-3FKimL.avatarSmall-3qwAkA.avatarSpeaking-2pCGrZ{
+  box-shadow: inset 0 0 0 2px hsl(139,calc(var(--saturation-factor, 1)*47.3%),43.9%),inset 0 0 0 3px var(--background-secondary);
+}
