--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -423,3 +423,7 @@
 .wrapper-1gVUIN.minimum-fXpVNc .callContainer-HtHELf{
    background-color: var(--background-color); 
 }
+
+.membersWrap-3NUR2t .members-3WRCEx{
+    height: auto !important;
+}
