--- a/DiscordEdit/discord_theme/DiscordEditUpdate.theme.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdate.theme.css
@@ -5,7 +5,7 @@
  * @author E.
  * @website https://evounnn.github.io/DiscordEdit/web/index.html
  * @invite pMu2X4w3ru
- * @updateUrl 
+ * @updateUrl https://evounnn.github.io/DiscordEdit/discord_theme/DiscordEditUpdate.theme.css
 */
 
 /*couleur :
