--- a/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
+++ b/DiscordEdit/discord_theme/DiscordEditUpdateSC.css
@@ -1,3 +1,26 @@
+/* Radial Status */
+
+div.avatarWrapperNormal-ahVUaC.avatarWrapper-eenWra.avatarPositionNormal-2jWoC2.clickable-GKg4Qy .avatarHoverTarget-1zzfRL .mask-1FEkla.svg-2azL_l{
+  margin-left:0px;
+}
+
+.avatarHint-k7pYop{
+  margin-left:5px;
+}
+
+div.avatarWrapperNormal-ahVUaC.avatarWrapper-eenWra.avatarPositionNormal-2jWoC2.clickable-GKg4Qy .avatarHoverTarget-1zzfRL .wrapper-1VLyxH{
+  margin-left: 5px;
+}
+
+.avatarHoverTarget-1zzfRL .avatarStack-3vfSFa .avatar-b5OQ1N{
+  background-color: black;
+  width: 85px;
+  height: 85px;
+  margin-left: -2.2px;
+  margin-top: -2.2px;
+
+}
+
 /*CSS*/
 
 /*Text color*/
