--- a/DiscordEdit/discord_theme/C_theme_SC.css
+++ b/DiscordEdit/discord_theme/C_theme_SC.css
@@ -1,5 +1,5 @@
 /**
- * @name C_theme
+ * @name C_theme_SC
  * @version 0.0.2
  * @author E.
  */
@@ -34,6 +34,17 @@ https://htmlcolorcodes.com/fr/
 
     /*default edit discord*/
 
+    --background-primary: var(--background-color);
+    --background-secondary: var(--background-color);
+    --background-tertiary: var(--background-color);
+    --background-secondary-alt: var(--background-color);
+    --channeltextarea-background: var(--background-color);
+}
+
+.theme-light{
+    --header-primary: #dcddde;
+    --header-secondary: #dcddde;
+    --text-normal: #dcddde;
     --background-primary: var(--background-color);
     --background-secondary: var(--background-color);
     --background-tertiary: var(--background-color);
@@ -273,4 +284,16 @@ https://htmlcolorcodes.com/fr/
 }
 .checked-1pZh2h svg path{
     fill: whitesmoke;
+}
+
+.callContainer-HtHELf{
+    background: rgba(0, 0, 0, 0.7);
+}
+
+.background-L8lGH6[style="background-color: rgb(0, 0, 0);"]{
+    background-color: rgba(0, 0, 0, 0)!important;
+}
+
+.tile-2TcwiO{
+    background-color: rgba(0, 0, 0, 0);
 }
